--- a/dev_mode/imports.css
+++ b/dev_mode/imports.css
@@ -23,6 +23,7 @@
 @import url('~@jupyterlab/markdownviewer-extension/style/index.css');
 @import url('~@jupyterlab/mathjax2-extension/style/index.css');
 @import url('~@jupyterlab/notebook-extension/style/index.css');
+@import url('~@jupyterlab/outputconsole-extension/style/index.css');
 @import url('~@jupyterlab/pdf-extension/style/index.css');
 @import url('~@jupyterlab/rendermime-extension/style/index.css');
 @import url('~@jupyterlab/running-extension/style/index.css');
