--- a/packages/outputconsole/style/base.css
+++ b/packages/outputconsole/style/base.css
@@ -12,40 +12,44 @@
 }
 
 .lab-output-console-line {
-  border-bottom: 1px solid #202020;
+  border-bottom: 1px solid var(--jp-border-color3);
   padding: 2px;
   font-size: 13px;
 }
 
-.lab-output-console-line .log-count {
+.lab-output-console-line .log-meta {
+  width: 120px;
+  padding: 2px;
+  box-sizing: border-box;
   display: inline-block;
-  width: 30px;
-  padding-right: 3px;
-  color: #6b6b6b;
-  text-align: right;
   vertical-align: top;
 }
-.lab-output-console-line .log-header {
+.lab-output-console-line .log-count-time {
+  width: 100%;
+}
+.lab-output-console-line .log-count {
   display: inline-block;
-  width: 90px;
-  padding-left: 3px;
-  color: #949494;
+  min-width: 20px;
+  color: var(--jp-ui-font-color3);
   vertical-align: top;
 }
 .lab-output-console-line .log-time {
   display: inline-block;
-  width: 100%;
-  color: #949494;
+  color: var(--jp-ui-font-color2);
   vertical-align: top;
 }
 .lab-output-console-line .log-sender {
   display: inline-block;
+  box-sizing: border-box;
   width: 100%;
-  color: #cc9f58;
+  padding-top: 3px;
+  color: var(--jp-warn-color2);
   vertical-align: top;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .lab-output-console-line .log-content {
   display: inline-block;
-  color: #eeeeee;
   width: calc(100% - 135px);
 }
