--- a/packages/ui-components/style/base.css
+++ b/packages/ui-components/style/base.css
@@ -3,80 +3,59 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
-/* Override Blueprint's _reset.scss styles */
-html {
-  box-sizing: unset;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: unset;
-}
-
-body {
-  color: unset;
-  font-family: var(--jp-ui-font-family);
-}
-
-p {
-  margin-top: unset;
-  margin-bottom: unset;
-}
-
-small {
-  font-size: unset;
-}
-
-strong {
-  font-weight: unset;
-}
-
-/* Override Blueprint's _typography.scss styles */
-a {
-  text-decoration: unset;
-  color: unset;
-}
-a:hover {
-  text-decoration: unset;
-  color: unset;
-}
-
-/* Override Blueprint's _accessibility.scss styles */
-:focus {
-  outline: unset;
-  outline-offset: unset;
-  -moz-outline-radius: unset;
-}
+@import './font/material-icons.css';
 
 /* Styles for ui-components */
-.jp-Button {
+button.jp-Button {
+  color: var(--jp-ui-font-color1);
+  background: var(--jp-layout-color1);
   border-radius: var(--jp-border-radius);
   padding: 0px 12px;
+  font-family: var(--jp-ui-font-family);
   font-size: var(--jp-ui-font-size1);
+  text-transform: initial;
+  font-weight: initial;
+  letter-spacing: normal;
 }
 
 /* Use our own theme for hover styles */
-button.jp-Button.bp3-button.bp3-minimal:hover {
+button.jp-Button:hover {
   background-color: var(--jp-layout-color2);
 }
-.jp-Button.minimal {
-  color: unset !important;
+
+.MuiInput-root.MuiInput-underline::before{
+  transition: none;
+  border-bottom: none;
+  content: none;
 }
 
-.jp-Button.jp-ToolbarButtonComponent {
-  text-transform: none;
+.MuiInput-root.MuiInput-underline:hover::before{
+  border-bottom: none;
 }
 
-.jp-InputGroup input {
+.MuiInput-root.MuiInput-underline::after{
+  transition: none;
+  border-bottom: none;
+  content: none;
+}
+
+.jp-InputGroup input{
+    height: auto;
+    padding-left: 10px;
+}
+
+.MuiInput-root.jp-InputGroup {
   box-sizing: border-box;
   border-radius: 0;
   background-color: transparent;
   color: var(--jp-ui-font-color0);
   box-shadow: inset 0 0 0 var(--jp-border-width) var(--jp-input-border-color);
+  font-family: var(--jp-ui-font-family);
+  font-size: var(--jp-ui-font-size1);
+  height: auto;
 }
 
-.jp-InputGroup input:focus {
+.MuiInput-root.jp-InputGroup:focus {
   box-shadow: inset 0 0 0 var(--jp-border-width)
       var(--jp-input-active-box-shadow-color),
     inset 0 0 0 3px var(--jp-input-active-box-shadow-color);
@@ -87,25 +66,26 @@ input::placeholder {
   color: var(--jp-ui-font-color3);
 }
 
+.jp-InputGroup .MuiInputAdornment-root {
+    height: auto;
+}
+
 .jp-Icon {
   color: var(--jp-layout-color4);
 }
 
-.jp-InputGroupAction {
-  padding: 6px;
-}
-
-.jp-HTMLSelect.bp3-html-select.bp3-minimal select {
+.jp-HTMLSelect select {
   height: 24;
   font-size: var(--jp-ui-font-size1);
   line-height: 14px;
   border-radius: 0;
   display: block;
   color: var(--jp-ui-font-color0);
+  padding-left: 10px;
 }
 
 /* Use our own theme for hover styles */
-.jp-HTMLSelect.bp3-html-select.bp3-minimal select:hover {
+.jp-HTMLSelect select:hover {
   color: var(--jp-ui-font-color0);
   background-color: var(--jp-layout-color2);
 }
