--- a/packages/ui-components/style/base.css
+++ b/packages/ui-components/style/base.css
@@ -23,39 +23,19 @@ button.jp-Button:hover {
   background-color: var(--jp-layout-color2);
 }
 
-.MuiInput-root.MuiInput-underline::before{
-  transition: none;
-  border-bottom: none;
-  content: none;
-}
-
-.MuiInput-root.MuiInput-underline:hover::before{
-  border-bottom: none;
-}
-
-.MuiInput-root.MuiInput-underline::after{
-  transition: none;
-  border-bottom: none;
-  content: none;
-}
-
-.jp-InputGroup input{
-    height: auto;
-    padding-left: 10px;
-}
-
-.MuiInput-root.jp-InputGroup {
-  box-sizing: border-box;
+.jp-InputGroup input {
+  height: auto;
+  padding-left: 10px;
   border-radius: 0;
-  background-color: transparent;
   color: var(--jp-ui-font-color0);
-  box-shadow: inset 0 0 0 var(--jp-border-width) var(--jp-input-border-color);
   font-family: var(--jp-ui-font-family);
   font-size: var(--jp-ui-font-size1);
-  height: auto;
+  box-sizing: border-box;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 var(--jp-border-width) var(--jp-input-border-color);
 }
 
-.MuiInput-root.jp-InputGroup:focus {
+.jp-InputGroup input:focus {
   box-shadow: inset 0 0 0 var(--jp-border-width)
       var(--jp-input-active-box-shadow-color),
     inset 0 0 0 3px var(--jp-input-active-box-shadow-color);
@@ -67,7 +47,9 @@ input::placeholder {
 }
 
 .jp-InputGroup .MuiInputAdornment-root {
-    height: auto;
+  height: auto;
+  right: 0;
+  position: absolute;
 }
 
 .jp-Icon {
