--- a/packages/application/style/icons.css
+++ b/packages/application/style/icons.css
@@ -3,6 +3,197 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
+/**
+ * Support for icons as inline SVG HTMLElements
+ */
+
+/* recolor the primary elements of an icon */
+.jp-icon0[fill] {
+  fill: var(--jp-inverse-layout-color0);
+}
+.jp-icon1[fill] {
+  fill: var(--jp-inverse-layout-color1);
+}
+.jp-icon2[fill] {
+  fill: var(--jp-inverse-layout-color2);
+}
+.jp-icon3[fill] {
+  fill: var(--jp-inverse-layout-color3);
+}
+.jp-icon4[fill] {
+  fill: var(--jp-inverse-layout-color4);
+}
+
+.jp-icon0[stroke] {
+  stroke: var(--jp-inverse-layout-color0);
+}
+.jp-icon1[stroke] {
+  stroke: var(--jp-inverse-layout-color1);
+}
+.jp-icon2[stroke] {
+  stroke: var(--jp-inverse-layout-color2);
+}
+.jp-icon3[stroke] {
+  stroke: var(--jp-inverse-layout-color3);
+}
+.jp-icon4[stroke] {
+  stroke: var(--jp-inverse-layout-color4);
+}
+
+/* recolor the accent elements of an icon */
+.jp-icon-accent0[fill] {
+  fill: var(--jp-layout-color0);
+}
+.jp-icon-accent1[fill] {
+  fill: var(--jp-layout-color1);
+}
+.jp-icon-accent2[fill] {
+  fill: var(--jp-layout-color2);
+}
+.jp-icon-accent3[fill] {
+  fill: var(--jp-layout-color3);
+}
+.jp-icon-accent4[fill] {
+  fill: var(--jp-layout-color4);
+}
+
+.jp-icon-accent0[stroke] {
+  stroke: var(--jp-layout-color0);
+}
+.jp-icon-accent1[stroke] {
+  stroke: var(--jp-layout-color1);
+}
+.jp-icon-accent2[stroke] {
+  stroke: var(--jp-layout-color2);
+}
+.jp-icon-accent3[stroke] {
+  stroke: var(--jp-layout-color3);
+}
+.jp-icon-accent4[stroke] {
+  stroke: var(--jp-layout-color4);
+}
+
+/* brand icon colors. Same for light and dark */
+.jp-icon-brand0[fill] {
+  fill: var(--jp-brand-color0);
+}
+.jp-icon-brand1[fill] {
+  fill: var(--jp-brand-color1);
+}
+.jp-icon-brand2[fill] {
+  fill: var(--jp-brand-color2);
+}
+.jp-icon-brand3[fill] {
+  fill: var(--jp-brand-color3);
+}
+.jp-icon-brand4[fill] {
+  fill: var(--jp-brand-color4);
+}
+
+.jp-icon-brand0[stroke] {
+  stroke: var(--jp-brand-color0);
+}
+.jp-icon-brand1[stroke] {
+  stroke: var(--jp-brand-color1);
+}
+.jp-icon-brand2[stroke] {
+  stroke: var(--jp-brand-color2);
+}
+.jp-icon-brand3[stroke] {
+  stroke: var(--jp-brand-color3);
+}
+.jp-icon-brand4[stroke] {
+  stroke: var(--jp-brand-color4);
+}
+
+/* warn icon colors. Same for light and dark */
+.jp-icon-warn0[fill] {
+  fill: var(--jp-warn-color0);
+}
+.jp-icon-warn1[fill] {
+  fill: var(--jp-warn-color1);
+}
+.jp-icon-warn2[fill] {
+  fill: var(--jp-warn-color2);
+}
+.jp-icon-warn3[fill] {
+  fill: var(--jp-warn-color3);
+}
+
+.jp-icon-warn0[stroke] {
+  stroke: var(--jp-warn-color0);
+}
+.jp-icon-warn1[stroke] {
+  stroke: var(--jp-warn-color1);
+}
+.jp-icon-warn2[stroke] {
+  stroke: var(--jp-warn-color2);
+}
+.jp-icon-warn3[stroke] {
+  stroke: var(--jp-warn-color3);
+}
+
+/* icon colors that contrast well with each other and most backgrounds */
+.jp-icon-contrast0[fill] {
+  fill: var(--jp-icon-contrast-color0);
+}
+.jp-icon-contrast1[fill] {
+  fill: var(--jp-icon-contrast-color1);
+}
+.jp-icon-contrast2[fill] {
+  fill: var(--jp-icon-contrast-color2);
+}
+.jp-icon-contrast3[fill] {
+  fill: var(--jp-icon-contrast-color3);
+}
+
+.jp-icon-contrast0[stroke] {
+  stroke: var(--jp-icon-contrast-color0);
+}
+.jp-icon-contrast1[stroke] {
+  stroke: var(--jp-icon-contrast-color1);
+}
+.jp-icon-contrast2[stroke] {
+  stroke: var(--jp-icon-contrast-color2);
+}
+.jp-icon-contrast3[stroke] {
+  stroke: var(--jp-icon-contrast-color3);
+}
+
+/* CSS for icons in selected items in the settings editor */
+#setting-editor .jp-PluginList .jp-mod-selected .jp-icon-selectable[fill] {
+  fill: white;
+}
+
+#setting-editor
+  .jp-PluginList
+  .jp-mod-selected
+  .jp-icon-selectable-inverse[fill] {
+  fill: var(--jp-brand-color1);
+}
+
+/* CSS for icons in selected filebrowser listing items */
+.jp-DirListing-item.jp-mod-selected .jp-icon-selectable[fill] {
+  fill: white;
+}
+
+.jp-DirListing-item.jp-mod-selected .jp-icon-selectable-inverse[fill] {
+  fill: var(--jp-brand-color1);
+}
+
+/* CSS for icons in selected tabs in the sidebar tab manager */
+#tab-manager .p-TabBar-tab.jp-mod-active .jp-icon-selectable[fill] {
+  fill: white;
+}
+
+#tab-manager .p-TabBar-tab.jp-mod-active .jp-icon-selectable-inverse[fill] {
+  fill: var(--jp-brand-color1);
+}
+
+/**
+ * Deprecated support for icons as CSS `background-images`
+ */
+
 .jp-MaterialIcon {
   min-width: 16px;
   min-height: 16px;
@@ -95,6 +286,10 @@
   background-image: var(--jp-icon-ellipses);
 }
 
+.jp-FileUploadIcon {
+  background-image: var(--jp-icon-file-upload);
+}
+
 .jp-FilledCircleIcon {
   background-image: var(--jp-icon-circle);
 }
@@ -177,10 +372,6 @@
   background-image: var(--jp-icon-stop);
 }
 
-.jp-TerminalIcon {
-  background-image: var(--jp-icon-terminal);
-}
-
 .jp-TextEditorIcon {
   background-image: var(--jp-icon-text-editor);
 }
@@ -189,80 +380,6 @@
   background-image: var(--jp-icon-undo);
 }
 
-.jp-FileUploadIcon {
-  background-image: var(--jp-icon-file-upload);
-}
-
 .jp-VegaIcon {
   background-image: var(--jp-icon-vega);
 }
-
-/* disabled/replaced by inline svg */
-
-/*.jp-MarkdownIcon {*/
-/*  background-image: var(--jp-icon-markdown);*/
-/*}*/
-
-/*.jp-PythonIcon {*/
-/*  background-image: var(--jp-icon-python);*/
-/*}*/
-
-/*.jp-RKernelIcon {*/
-/*  background-image: var(--jp-icon-r);*/
-/*}*/
-
-/*.jp-SpreadsheetIcon {*/
-/*  background-image: var(--jp-icon-spreadsheet);*/
-/*}*/
-
-/*.jp-YamlIcon {*/
-/*  background-image: var(--jp-icon-yaml);*/
-/*}*/
-
-/*.jp-FileIcon {*/
-/*  background-image: var(--jp-icon-file);*/
-/*}*/
-
-/*.jp-KernelIcon {*/
-/*  background-image: var(--jp-icon-kernel);*/
-/*}*/
-
-/*.jp-ImageIcon {*/
-/*  background-image: var(--jp-icon-image);*/
-/*}*/
-
-/*.jp-JsonIcon {*/
-/*  background-image: var(--jp-icon-json);*/
-/*}*/
-
-/*.jp-NotebookIcon {*/
-/*  background-image: var(--jp-icon-notebook);*/
-/*}*/
-
-/*.jp-FolderIcon {*/
-/*  background-image: var(--jp-icon-folder);*/
-/*}*/
-
-/*.jp-BuildIcon {*/
-/*  background-image: var(--jp-icon-build);*/
-/*}*/
-
-/*.jp-ExtensionIcon {*/
-/*  background-image: var(--jp-icon-extension);*/
-/*}*/
-
-/*.jp-FolderIcon {*/
-/*  background-image: var(--jp-icon-folder);*/
-/*}*/
-
-/*.jp-PaletteIcon {*/
-/*  background-image: var(--jp-icon-palette);*/
-/*}*/
-
-/*.jp-RunningIcon {*/
-/*  background-image: var(--jp-icon-stop-circle);*/
-/*}*/
-
-/*.jp-TabIcon {*/
-/*  background-image: var(--jp-icon-tab);*/
-/*}*/
