add display:flex to .jp-Inspector-default-content

--- a/packages/inspector/style/base.css
+++ b/packages/inspector/style/base.css
@@ -47,6 +47,7 @@
 }
 
 .jp-Inspector-default-content {
+  display: flex;
   align-items: center;
   justify-content: center;
   font-size: xx-large;
