--- a/style/index.css
+++ b/style/index.css
@@ -18,9 +18,12 @@
   min-width: 350px !important;
 }
 
+.jp-DebuggerSidebar div:not(:first-child) .jp-DebuggerSidebarVariables-header {
+  border-top: solid var(--jp-border-width) var(--jp-border-color1);
+}
+
 .jp-DebuggerSidebar div .jp-DebuggerSidebarVariables-header {
   border-bottom: solid var(--jp-border-width) var(--jp-border-color1);
-  border-top: solid var(--jp-border-width) var(--jp-border-color1);
 }
 
 .jp-DebuggerSidebarVariables-header {
@@ -145,6 +148,24 @@
   font-family: FontAwesome;
   text-align: center;
   display: inline-block;
+}
+
+/*  menu */
+
+.jp-MenuComponent {
+  position: absolute;
+  list-style: none;
+  left: 0;
+  right: 0;
+  margin: 0;
+  top: 25px;
+  z-index: 10000;
+  padding: 10px 10px;
+  background: var(--jp-layout-color1);
+  color: var(--jp-ui-font-color1);
+  border: var(--jp-border-width) solid var(--jp-border-color1);
+  font-size: var(--jp-ui-font-size1);
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.2);
 }
 
 /* font awsome */
