--- a/packages/console/style/index.css
+++ b/packages/console/style/index.css
@@ -9,6 +9,7 @@
 @import url('~@phosphor/dragdrop/style/index.css');
 @import url('~@jupyterlab/codeeditor/style/index.css');
 @import url('~@jupyterlab/rendermime/style/index.css');
+@import url('~@jupyterlab/outputarea/style/index.css');
 @import url('~@jupyterlab/cells/style/index.css');
 
 @import url('./base.css');
