--- a/style/index.css
+++ b/style/index.css
@@ -3,6 +3,8 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
+@import './toolbar.css';
+
 .jp-Debugger {
   background: var(--jp-layout-color1);
   top: 0;
