--- a/style/index.css
+++ b/style/index.css
@@ -3,6 +3,7 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
+@import './icons.css';
 @import './sidebar.css';
 
 .jp-Debugger {
