--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -3,7 +3,22 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
-@import './icons.css';
+.jp-DebuggerSidebar {
+  display: flex;
+  flex-direction: column;
+  color: var(--jp-ui-font-color1);
+  background: var(--jp-layout-color1);
+  font-size: var(--jp-ui-font-size1);
+  width: 350px;
+}
+
+.jp-DebuggerSidebar div:not(:first-child) .jp-DebuggerSidebarVariables-header {
+  border-top: solid var(--jp-border-width) var(--jp-border-color1);
+}
+
+.jp-DebuggerSidebar div .jp-DebuggerSidebarVariables-header {
+  border-bottom: solid var(--jp-border-width) var(--jp-border-color1);
+}
 
 .jp-DebuggerSidebar header {
   display: flex;
