partial fix for scrollbar theming toggle

--- a/packages/application/style/scrollbar.css
+++ b/packages/application/style/scrollbar.css
@@ -8,12 +8,13 @@
  */
 
 /* use standard opaque scrollbars for most nodes */
-div.jp-LabShell[data-jp-theme-scrollbars='true'] {
+[data-jp-theme-scrollbars='true'] {
   scrollbar-color: rgb(var(--jp-scrollbar-thumb-color))
     var(--jp-scrollbar-background-color);
 }
 
-/* for code nodes, use a transparent style of scrollbar */
+/* for code nodes, use a transparent style of scrollbar. These selectors
+ * will match lower in the tree, and so will override the above */
 [data-jp-theme-scrollbars='true'] .CodeMirror-hscrollbar,
 [data-jp-theme-scrollbars='true'] .CodeMirror-vscrollbar {
   scrollbar-color: rgba(var(--jp-scrollbar-thumb-color), 0.5) transparent;
