add tool in breakpoints remove all

--- a/style/icons.css
+++ b/style/icons.css
@@ -54,3 +54,7 @@
 .jp-VariableIcon {
   background-image: url('icons/variable.svg');
 }
+
+.jp-CloseAllIcon {
+  background-image: url('icons/close-all.svg');
+}
