--- a/style/variables.css
+++ b/style/variables.css
@@ -72,6 +72,7 @@
 
 .jp-DebuggerVariables-search {
   color: var(--jp-ui-font-color1);
+  overflow: visible;
   flex: 0 0 auto;
   display: flex;
   flex-direction: row;
