add setting breakpoint in UI

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -6,3 +6,10 @@
 .jp-DebuggerBreakpoints-body {
   padding: 10px;
 }
+
+.jp-breakpoint-marker {
+  position: absolute;
+  left: -30px;
+  top: -1px;
+  color: #f22;
+}
