--- a/packages/cells/style/index.css
+++ b/packages/cells/style/index.css
@@ -11,6 +11,7 @@
 @import url('~@jupyterlab/codemirror/style/index.css');
 @import url('~@jupyterlab/rendermime/style/index.css');
 @import url('~@jupyterlab/attachments/style/index.css');
+@import url('~@jupyterlab/filebrowser/style/index.css');
 @import url('~@jupyterlab/outputarea/style/index.css');
 
 @import url('./base.css');
