--- a/packages/outputconsole-extension/style/base.css
+++ b/packages/outputconsole-extension/style/base.css
@@ -2,6 +2,9 @@
   transition: background-color 1s ease-out;
   background-color: var(--jp-info-color0);
 }
+.outputconsole-status-item.hilited {
+  background-color: var(--jp-info-color0);
+}
 
 .jp-StatusItem-output-console {
   line-height: 24px;
