show log timestamp in prompt area, flash & message limit settings

--- a/packages/outputconsole/style/base.css
+++ b/packages/outputconsole/style/base.css
@@ -77,3 +77,14 @@
   display: inline-block;
   width: calc(100% - 135px);
 }
+
+.jlab-output-logger-view .jp-OutputArea-child {
+  border-bottom: 1px solid var(--jp-border-color3);
+}
+
+.jlab-output-logger-view .jp-OutputArea-prompt {
+  width: 85px;
+  color: var(--jp-ui-font-color2);
+  font-size: 13px;
+  padding: 2px;
+}
