--- a/packages/outputconsole-extension/style/base.css
+++ b/packages/outputconsole-extension/style/base.css
@@ -1,3 +1,11 @@
+:root [data-jp-theme-light='true'] {
+  --jp-icon-output-console: url('./list-icon-light.svg');
+}
+
+:root [data-jp-theme-light='false'] {
+  --jp-icon-output-console: url('./list-icon-dark.svg');
+}
+
 .outputconsole-status-item.hilite {
   transition: background-color 1s ease-out;
   background-color: var(--jp-info-color0);
@@ -10,4 +18,8 @@
   line-height: 24px;
   vertical-align: middle;
   color: var(--jp-ui-font-color1);
+}
+
+.lab-output-console-icon {
+  background-image: var(--jp-icon-output-console);
 }
