Backport PR #6833: Log Console extension to capture unhandled messages and other activity

--- a/dev_mode/imports.css
+++ b/dev_mode/imports.css
@@ -19,6 +19,7 @@
 @import url('~@jupyterlab/javascript-extension/style/index.css');
 @import url('~@jupyterlab/json-extension/style/index.css');
 @import url('~@jupyterlab/launcher-extension/style/index.css');
+@import url('~@jupyterlab/logconsole-extension/style/index.css');
 @import url('~@jupyterlab/mainmenu-extension/style/index.css');
 @import url('~@jupyterlab/markdownviewer-extension/style/index.css');
 @import url('~@jupyterlab/mathjax2-extension/style/index.css');
